# prj

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
crates/prj-cli/: Cargo.toml
crates/prj-cli/src/: main.rs
crates/prj-cli/src/cli/: mod.rs
crates/prj-cli/src/shell/: init.rs  mod.rs
crates/prj-cli/src/tui/: actions.rs  app.rs  mod.rs  view.rs
crates/prj-core/: Cargo.toml
crates/prj-core/src/: clean.rs  detect.rs  lib.rs  manifest.rs  project.rs  stats.rs
src/: commands.rs  config.rs  data_store.rs  input.rs  lib.rs  main.rs  pj.sh  project.rs
src/cli/: args.rs  mod.rs
src/core/: config.rs  error.rs  manifest.rs  mod.rs  project.rs  stats.rs
src/shell/: init.rs
src/tui/: actions.rs  app.rs  fuzzy.rs  mod.rs  view.rs
