[package]
name = "prj-cli"
version = "1.0.0"
authors = ["hxyulin <hxyulin@proton.me>"]
description = "A CLI tool for managing projects on your local machine"
license = "MIT"
repository = "https://github.com/hxyulin/prj"
homepage = "https://github.com/hxyulin/prj"
documentation = "https://docs.rs/prj-cli"
readme = "README.md"
keywords = ["cli", "project-management", "github", "git", "workspace"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[[bin]]
name = "prj"
path = "src/main.rs"

[features]
default = ["git2"]
git2 = ["dep:git2"]

[dependencies]
clap = { version = "4.5.20", features = ["color", "derive", "wrap_help"] }
colored = "2.1.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
git2 = { version = "0.20.0", optional = true }
prettytable = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
skim = "0.10.4"
toml = "0.8.19"
