[package]
name = "prj-cli"
description = "A CLI tool for managing projects on your local machine"
keywords = ["cli", "project-management", "git", "workspace"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prj"
path = "src/main.rs"

[dependencies]
prj-core = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
nucleo = { workspace = true }
bytesize = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
color-eyre = { workspace = true }
