[package]
name = "prj-core"
description = "Core library for prj — project detection, database, stats, and manifest"
keywords = ["project-management", "git", "workspace"]
categories = ["development-tools"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }
tokei = { workspace = true }
rayon = { workspace = true }
bytesize = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
